--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-medialibrary": "^11.5"
+        "spatie/laravel-medialibrary": "^11.5",
+        "symfony/css-selector": "^7.1",
+        "symfony/dom-crawler": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
