--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "mohamedsabil83/filament-forms-tinyeditor": "^2.3",
         "rappasoft/laravel-livewire-tables": "^3.4",
         "spatie/laravel-medialibrary": "^11.5",
         "symfony/css-selector": "^7.1",
