çeviriler eklendi, sayfalar için dil filtresi kaldırıldı

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /node_modules
 /public/storage
 /public/scss
-/public/css/filament
-/public/js/filament
+/public/css
+/public/js
 /public/fonts
 /public/images
 /public/build
